tests/spec/non_conformant/errors/invalid_operation/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/invalid-operation"
#[allow(unused)]
use super::rsass;

// From "sass-spec/spec/non_conformant/errors/invalid-operation/gt.hrx"

// Ignoring "gt", error tests are not supported yet.

// From "sass-spec/spec/non_conformant/errors/invalid-operation/gte.hrx"

// Ignoring "gte", error tests are not supported yet.

// From "sass-spec/spec/non_conformant/errors/invalid-operation/lt.hrx"

// Ignoring "lt", error tests are not supported yet.

// From "sass-spec/spec/non_conformant/errors/invalid-operation/lte.hrx"

// Ignoring "lte", error tests are not supported yet.

// From "sass-spec/spec/non_conformant/errors/invalid-operation/mod.hrx"

// Ignoring "mod", error tests are not supported yet.

// From "sass-spec/spec/non_conformant/errors/invalid-operation/plus.hrx"

// Ignoring "plus", error tests are not supported yet.

// From "sass-spec/spec/non_conformant/errors/invalid-operation/sub.hrx"

// Ignoring "sub", error tests are not supported yet.

// From "sass-spec/spec/non_conformant/errors/invalid-operation/times.hrx"

// Ignoring "times", error tests are not supported yet.
